fix: CTA button text alignment

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,10 +19,10 @@
   padding: 0px;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 640px) {
 
   .cards>ul {
-    grid-template-columns: repeat(1, minmax(0, 1fr));
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 }
 
